google login feature added

--- a/index.css
+++ b/index.css
@@ -9,7 +9,8 @@ body {
 header {
   display: flex;
   justify-content: center;
-  margin: 3em;
+  margin-bottom: 3em;
+  margin-top: 10em;
 }
 #inputField {
   display: flex;
